--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.2.0",
+    "@nestjs/mapped-types": "^0.1.1",
     "@nestjs/mongoose": "^7.1.0",
     "@nestjs/passport": "^7.1.3",
     "@nestjs/platform-express": "^7.0.0",
