--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nest-mongo",
-  "version": "0.0.1",
+  "name": "mode-input",
+  "version": "0.1.0",
   "description": "",
-  "author": "",
+  "author": "saeed jalali",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
