--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "csurf": "^1.11.0",
+    "helmet": "^4.4.1",
     "mongoose": "^5.10.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
