--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@nestjs/mongoose": "^7.0.3",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "^4.7.15",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "csurf": "^1.11.0",
     "helmet": "^4.4.1",
     "mongoose": "^5.10.1",
     "passport": "^0.4.1",
@@ -42,7 +42,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
